k8s/15 Ingress/files/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - demo.alior.pl
    secretName: aks-ingress-tls
  rules:
   - host: demo.alior.pl
     http:
      paths:
        - path: /srv1
          backend:
            serviceName: service1-service
            servicePort: 5678
        - path: /srv2
          backend:
            serviceName: service2-service
            servicePort: 5678
